fix about layout issue on large screen

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -289,6 +289,7 @@ h2 {
   h2 {
     margin-top: 0px;
     margin-bottom: 30px;
+    flex: 0 0 100%;
   }
 }
 
